src/assets/sass/components/_TheFooterEmailList.scss
@use "../abstracts/all" as *;

.email-list {
  box-sizing: border-box;
  background-color: $soft-blue;
  text-align: center;
  padding: 60px 20px;
  @include flexbox(col, center, center);

  > * {
    color: white;
  }

  &__subtitle {
    text-transform: uppercase;
    letter-spacing: 5px;
    @include font-size($span-font-sizes);
  }

  &__title {
    width: 100%;
    max-width: 450px;
    color: inherit;
    margin-top: 29px;
  }

  &__thank-note {
    display: block;
    margin-top: 30px;
    font-weight: $bold;
    @include font-size($tab-font-sizes);
  }

  ::selection {
    color: $soft-blue;
    background-color: white;
  }
}

.email-list__signup {
  width: 100%;
  max-width: 445px;
  margin-top: 29px;
  @include flexbox(null, center, center, 0 20px);
  flex-wrap: wrap;

  .input-wrapper {
    isolation: isolate;
    position: relative;

    &::after {
      content: url("assets/images/icon-error.svg");
      position: absolute;
      right: 10px;
      transform: translateY(50%) scale(0);
      transform-origin: center;
      transition: transform 150ms;
    }
  }

  &__email {
    box-sizing: border-box;
    width: 300px;
    height: 46px;
    padding-left: 16px;
    border-radius: 5px;
    border: none;
    font-size: 0.9rem;
    caret-color: black;
    transition: box-shadow 200ms;

    &::placeholder {
      color: $grayish-blue;
    }

    &:focus-visible { 
      box-shadow: 4px 4px 8px 1px rgba($very-dark-blue, .2);
      outline: transparent;
    }
  }

  &__alert {
    position: absolute;
    width: 100%;
    height: 27px;
    left: 0;
    bottom: -30px;
    background: $soft-red;
    padding-top: 5px;
    z-index: -1;
    font-size: 0.86rem;
    font-style: italic;
    border-radius: 0 0 5px 5px;
    font-weight: $bold;
    box-shadow: 4px 4px 8px 1px rgba($very-dark-blue, .2);
  }

  &__btn {
    flex-grow: 1;

    > button {
      width: 100% !important;
      min-width: 125px;
      max-width: 300px;

      &:hover,
      &:focus {
        background-color: white !important;
      }
    }
  }
}

.invalid .email-list__signup__email {
  border: 1.5px $soft-red solid;
  caret-color: $soft-red;
  outline: $soft-red;
}

.invalid .input-wrapper::after {
  transform: translateY(50%) scale(1);
}

// alert transition

.email-alert-transition-enter-active,
.email-alert-transition-leave-active {
  transition: transform 150ms ease-out;
}

.email-alert-transition-enter-from,
.email-alert-transition-leave-to {
  transform: translateY(-30px);
}

// thank-note transition

.thank-note-transition-enter-active,
.thank-note-transition-leave-active {
  transition: transform 300ms ease-out;
}

.thank-note-transition-enter-to,
.thank-note-transition-leave-to {
  // transform: scale(1.2);
  animation: thanknote 350ms ease-out;
}

@keyframes thanknote {
  0% {
    transform: scale(0.4);
  }
  75% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

